# claude-emotion

./: .gitignore  Cargo.toml  LICENSE  LICENSE-WTFPL  README.md  TESTING_SUMMARY.md  build-release.sh  test-claude-integration.sh  test-demo.sh  test-plan.md
Formula/: claude-emotion.rb
shell/: claude-emotion.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
